@@ -28,6 +28,9 @@ COMMITERS
 Do not forget to update this page on the wiki when making changes relevant to developers:
 http://docs.joomla.org/index.php?title=Version_1.6_Developer_Notes
 
+29-Jan-2009 Charl van Niekerk
+ - Removed target="_blank" attributes from com_content.
+
 29-Jan-2009 Andrew Eddie
  ^ [#14784] Move delete queries of messages from JTableUser to plugin
 
